feat: added Hibernate and work with JpaRepository